--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.14.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^4.5.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
@@ -26,8 +26,10 @@
     "popper.js": "^1.16.1"
   },
   "engines": {
-    "node": "^10.15.0",
-    "npm": "^6.0.0"
+    
+    "node":">=18.0.0",
+    "npm":">=7.0.0"
+    
   },
   "description": "## Welcome to the MidTerm Project - the Favourite Book List App",
   "main": "server.js",
